zerocopy-derive/tests/ui-msrv/union.stderr
error: unsupported on types with type parameters
  --> tests/ui-msrv/union.rs:20:10
   |
20 | #[derive(AsBytes)]
   |          ^^^^^^^
   |
   = note: this error originates in the derive macro `AsBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: cannot derive Unaligned with repr(align(N > 1))
  --> tests/ui-msrv/union.rs:38:11
   |
38 | #[repr(C, align(2))]
   |           ^^^^^^^^

error: cannot derive Unaligned with repr(align(N > 1))
  --> tests/ui-msrv/union.rs:54:16
   |
54 | #[repr(packed, align(2))]
   |                ^^^^^^^^

error: cannot derive Unaligned with repr(align(N > 1))
  --> tests/ui-msrv/union.rs:60:18
   |
60 | #[repr(align(1), align(2))]
   |                  ^^^^^^^^

error: cannot derive Unaligned with repr(align(N > 1))
  --> tests/ui-msrv/union.rs:66:8
   |
66 | #[repr(align(2), align(4))]
   |        ^^^^^^^^

error[E0277]: the trait bound `HasPadding<AsBytes2, true>: ShouldBe<false>` is not satisfied
  --> tests/ui-msrv/union.rs:26:10
   |
26 | #[derive(AsBytes)]
   |          ^^^^^^^ the trait `ShouldBe<false>` is not implemented for `HasPadding<AsBytes2, true>`
   |
   = help: the following implementations were found:
             <HasPadding<T, VALUE> as ShouldBe<VALUE>>
   = help: see issue #48214
   = note: this error originates in the derive macro `AsBytes` (in Nightly builds, run with -Z macro-backtrace for more info)
